--- a/olca-app-html/src/home/home.css
+++ b/olca-app-html/src/home/home.css
@@ -14,30 +14,6 @@
     url('fonts/TheSans_B7_Bold.ttf') format('truetype');
 }
 
-@font-face {
-  font-family: 'Inter';
-  font-weight: normal;
-  font-style: normal;
-  src: url('fonts/Inter-Regular.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Iosevka Web';
-  font-display: swap;
-  font-weight: 400;
-  font-stretch: normal;
-  font-style: normal;
-  src: url('fonts/iosevka-regular.ttf') format('truetype'),
-    url('fonts/iosevka-regular.woff2') format('woff2');
-}
-
-:root {
-  --green: #98c72b;
-  --white: #fff;
-  --yellow: #ffd233;
-  --gray: #8b8893;
-}
-
 html,
 body {
   width: 100%;
@@ -49,330 +25,122 @@ body {
 html {
   position: relative;
   min-height: 100%;
+  background-image: url('images/background_start_page.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+:root {
+  --font-family: "TheSans", system-ui, -apple-system, "Segoe UI", "Roboto",
+    "Ubuntu", "Cantarell", "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --block-spacing-vertical: 0px;
 }
 
 body {
-  font-family: 'Inter', 'Iosevka Web', 'TheSans', Helvetica, Arial, sans-serif;
+  font-family: 'TheSans', Helvetica, Arial, sans-serif;
   margin: 0;
-  padding: 0;
-}
-
-.container {
+  padding: 25px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background-image: url('images/background_start_page.jpg');
-  /*
-  background-color: rgba(0, 0, 0, 0.5);
-  background-blend-mode: overlay;
-  */
-  line-height: 1.42857143;
-  background-attachment: fixed;
-  background-size: cover;
-  position: relative;
+  min-height: 100vh;
 }
 
-.max-width-container {
-  width: 100%;
-  height: 100%;
-  max-width: 2000px;
+main {
+  flex: 1;
+  padding: 0px !important;
 }
 
-.header {
-  width: 100%;
-  height: 136px;
-}
-
-.navigation {
-  padding-top: 25px;
-  padding-left: 25px;
-  padding-right: 25px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: 'TheSans';
-}
-
-.img-link {
-  width: 180px;
-  height: 111px;
+footer {
+  min-height: 50px;
+  padding: 0px !important;
 }
 
 .openlca-logo {
-  width: 100%;
+  width: 180px;
+  height: 111px;
+  float: right;
 }
 
-.nav-info-container {
-  font-family: 'Iosevka Web';
-  display: flex;
-  justify-content: space-between;
-  background: rgba(0, 0, 0, 0.6);
+.gd-logo {
+  float: right;
+}
+
+.olca-lib-hint {
+  text-align: center;
+}
+
+.olca-lib-hint>p {
+  display: inline;
+  justify-content: center;
+  align-items: center;
+  color: #ffd233;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
   border-radius: 10px;
-  color: var(--yellow);
-  padding-left: 15px;
-  padding-right: 15px;
+  background-blend-mode: overlay;
   cursor: pointer;
 }
 
-.nav-info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.info-icon {
+.olca-lib-hint-icon {
   max-width: 16px;
   margin-right: 8px;
 }
 
-.libhint-link {
-  text-decoration: none;
-  color: var(--yellow);
-}
-
-.section {
-  height: calc(100vh - 186px);
-  display: flex;
-  margin-left: 25px;
-  margin-right: 25px;
-}
-
-.left-section {
-  width: 35%;
-  height: 100%;
-}
-
-.nav-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-content: center;
-  align-items: center;
-  overflow-y: hidden;
-}
-
-.nav {
-  list-style-type: none;
-  color: var(--white);
-  margin: 0px;
-  padding: 0px;
-}
-
-.nav-item {
-  font-size: 24px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+.olca-nav-item {
+  color: white;
   cursor: pointer;
-  position: relative;
-  width: fit-content;
+  font-size: 1.6rem;
 }
 
-.nav-item::after {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 4px;
-  height: 2px;
-  background-color: var(--white);
-  content: '';
-  display: none;
+.olca-nav-item:hover {
+  text-decoration: underline;
 }
 
-.nav-item.active,
-.nav-item.active::after {
-  color: var(--white);
-}
-
-.nav-item.active::after {
-  display: block;
-  background: var(--white);
-}
-
-.nav-item:hover::after {
-  display: block;
-}
-
-.footer {
-  width: 100%;
-  height: 50px;
-}
-
-.right-section {
-  width: 65%;
-  height: 100%;
-  overflow-y: hidden;
-}
-
-.right-section-container {
-  height: 100%;
-  display: flex;
-  align-content: center;
-  align-items: center;
-}
-
-.content-box {
-  margin: auto;
-  margin-right: 0px;
-  width: 500px;
-  min-height: 250px;
-  padding: 25px;
-  font-size: 22px;
+.olca-content-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  /*background: rgba(0, 0, 0, 0.6);*/
-  color: var(--gray);
-  word-wrap: break-word;
-  white-space: pre-wrap;
-  word-break: break-word;
-  font-family: 'TheSans';
-}
-
-.footer-container {
-  padding-bottom: 25px;
-  padding-left: 25px;
-  padding-right: 25px;
-  display: flex;
-}
-
-.gd-logo {
-  width: 180px;
-  height: 24px;
-  background-image: url('images/greendelta-logo.png');
   margin: auto;
-  margin-right: 0px;
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 
-.gd-logo:hover {
-  background-image: url('images/greendelta-logo-active.png');
-  background-size: cover;
-  background-size: contain;
-  background-repeat: no-repeat;
+.olca-content>p {
+  color: #415462;
+  font-size: 1.4rem;
 }
 
-.content-box a {
-  color: var(--gray);
-  cursor: pointer;
+.olca-content>p>a {
+  color: #415462;
+  text-decoration: underline;
 }
 
-@media (max-width: 768px) {
-  .navigation {
-    flex-direction: column;
-    gap: 10px;
-  }
+.olca-content>p>a:hover {
+  color: white;
+}
 
-  .nav-info {
-    font-size: 22px;
-    line-height: 22px;
+@media (max-width: 1400px) {
+  .olca-nav-item {
+    font-size: 1.4rem;
   }
-
-  .info-icon {
-    max-width: 16px;
-  }
-
-  .nav-item {
-    font-size: 14px;
-  }
-
-  .content-box {
-    font-size: 14px;
-    padding: 10px;
-  }
-
-  .img-link {
-    width: 120px;
-    height: 70px;
-  }
-
-  .right-section {
-    width: 50%;
-    height: 100%;
-  }
-
-  .left-section {
-    width: 50%;
-    height: 100%;
+  .olca-content>p {
+    font-size: 1.2rem;
   }
 }
 
-@media (max-width: 1024px) {
-  .nav-item {
-    font-size: 18px;
+@media (max-width: 1200px) {
+  .olca-nav-item {
+    font-size: 1.2rem;
   }
-
-  .content-box {
-    font-size: 18px;
-    padding: 15px;
-  }
-
-  .img-link {
-    width: 120px;
-    height: 80px;
-  }
-
-  .gd-logo {
-    width: 150px;
-    height: 18px;
+  .olca-content>p {
+    font-size: 1.0rem;
   }
 }
 
-@media (min-width: 1280px) {
-  .content-box {
-    margin: 0 auto;
+@media (max-width: 1000px) {
+  .olca-nav-item {
+    font-size: 1.0rem;
   }
-}
-
-@media (min-width: 1440px) {
-  .nav-info {
-    font-size: 22px;
-    line-height: 22px;
-  }
-
-  .info-icon {
-    max-width: 22px;
-  }
-
-  .container {
-    overflow: hidden;
-  }
-
-  .nav-item {
-    font-size: 22px;
-  }
-
-  .section {
-    height: calc(100vh - 186px);
-  }
-
-  .content-box {
-    font-size: 22px;
-    width: 800px;
-    height: 350px;
-  }
-
-  .nav-info-container {
-    font-size: 16px;
-  }
-
-  .img-link {
-    width: 180px;
-    height: 120px;
-  }
-
-  .gd-logo {
-    width: 200px;
-    height: 48px;
-  }
-}
-
-@media (max-height: 700px) {
-  .footer {
-    margin-top: 20px;
-  }
-
-  .header {
-    margin-bottom: 20px;
+  .olca-content>p {
+    font-size: 0.8rem;
   }
 }
