smaller tweaks for the start page

--- a/olca-app-html/src/home/home.css
+++ b/olca-app-html/src/home/home.css
@@ -97,8 +97,17 @@ footer {
   text-decoration: underline;
 }
 
-.olca-content-container {
+.olca-row {
   display: flex;
+}
+
+.olca-left-col {
+  flex: 50%;
+}
+
+.olca-right-col {
+  display: flex;
+  flex: 50%;
   align-items: center;
   justify-content: center;
   margin: auto;
