--- a/olca-app-html/src/home/home.css
+++ b/olca-app-html/src/home/home.css
@@ -114,12 +114,12 @@ footer {
 }
 
 .olca-content>p {
-  color: #415462;
+  color: white;
   font-size: 1.2rem;
 }
 
 .olca-content>p>a {
-  color: #415462;
+  color: white;
   text-decoration: underline;
 }
 
